Spacing bugfix (#3)
Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,30 @@ p a {
   margin-bottom: 1.5rem;
 }
 
+
+.wind iframe {
+  max-height: 420px !important
+}
+
+.uaq .wind iframe, .mikoko .wind iframe{
+  max-height: 380px !important
+}
+
+
+@media (max-width: 780px){
+  .wind iframe {
+    max-height: 380px !important
+  }
+
+  .forecast iframe {
+    max-height: 330px !important
+  }
+  .uaq .wind iframe, .mikoko .wind iframe {
+    max-height: 330px !important
+  }
+}
+
+
 /** Card links */
 .card-body a:hover>h2 {
   color: #5d5dff;
